--- a/html/bootstrap_button_groups.html
+++ b/html/bootstrap_button_groups.html
@@ -171,6 +171,58 @@
                                 <h3>Система сеток Bootstrap 5</h3>
 
 
+
+
+
+
+
+                                <h2>Сгруппированные кнопки с выпадающим списком</h2>
+
+                                <div class="w3-example">
+                                    <h3> Пример</h3>
+                                    <div class="w3-code notranslate htmlHigh">
+                                        <pre>
+&lt;div class="container mt-3"&gt;
+    &lt;2>Nesting Button Groups&lt;/h2&gt;
+    &lt;p>Nest button groups to create dropdown menus:&lt;/p&gt;
+    &lt;div class="btn-group"&gt;
+        &lt;button type="button" class="btn btn-primary">Apple&lt;/button&gt;
+        &lt;button type="button" class="btn btn-primary">Samsung&lt;/button&gt;
+        &lt;div class="btn-group"&gt;
+            &lt;button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"&gt;Sony&lt;/button&gt;
+            &lt;ul class="dropdown-menu"&gt;
+                &lt;li>&lt;a class="dropdown-item" href="#">Tablet&lt;/a&gt;&lt;/li&gt;
+                &lt;li>&lt;a class="dropdown-item" href="#">Smartphone&lt;/a&gt;&lt;/li&gt;
+            &lt;/ul&gt;
+        &lt;/div&gt;
+    &lt;/div&gt;
+&lt;/div&gt;
+                                </pre>
+                                        <div class="container mt-3">
+                                            <h2>Nesting Button Groups</h2>
+                                            <p>Nest button groups to create dropdown menus:</p>
+                                            <div class="btn-group">
+                                                <button type="button" class="btn btn-primary">Apple</button>
+                                                <button type="button" class="btn btn-primary">Samsung</button>
+                                                <div class="btn-group">
+                                                    <button type="button" class="btn btn-primary dropdown-toggle"
+                                                        data-bs-toggle="dropdown">Sony</button>
+                                                    <ul class="dropdown-menu">
+                                                        <li><a class="dropdown-item" href="#">Tablet</a></li>
+                                                        <li><a class="dropdown-item" href="#">Smartphone</a></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
+                                </div>
+
+
+
+
+
+
                             </section>
                         </div>
                     </div>
