--- a/html/bootstrap_button_groups.html
+++ b/html/bootstrap_button_groups.html
@@ -141,7 +141,7 @@
                     <div class="container_text">
                         <div class="w-title">
                             <div class="container">
-                                <h1>Bootstrap 5 Сетки</h1>
+                                <h1>Bootstrap 5 Группа кнопок </h1>
                             </div>
                         </div>
                         <div class="column is-9-desktop is-12-tablet is-12-mobile w-content">
@@ -168,8 +168,28 @@
                             </div>
 
                             <section id="w-main">
-                                <h3>Система сеток Bootstrap 5</h3>
+                                <p>Группа кнопок Bootstrap позволяет группировать кнопки по горизонтали или вертикали.
+                                </p>
+                                <h2>Горизонтальная группа кнопок</h2>
 
+                                <div class="w3-example">
+                                    <h3> Пример</h3>
+                                    <div class="w3-code notranslate htmlHigh">
+                                        <pre>
+&lt;div class="btn-group" style="margin:5px 0 10px 0;"&gt;
+  &lt;button type="button" class="btn btn-primary"&gt;Apple&lt;/button&gt;
+  &lt;button type="button" class="btn btn-primary"&gt;Samsung&lt;/button&gt;
+  &lt;button type="button" class="btn btn-primary"&gt;Sony&lt;/button&gt;
+&lt;/div&gt;
+                                </pre>
+                                        <div class="btn-group" style="margin:5px 0 10px 0;">
+                                            <button type="button" class="btn btn-primary">Apple</button>
+                                            <button type="button" class="btn btn-primary">Samsung</button>
+                                            <button type="button" class="btn btn-primary">Sony</button>
+                                        </div>
+                                    </div>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
+                                </div>
 
 
 
